--- a/src/components/button/custom-button.styles.scss
+++ b/src/components/button/custom-button.styles.scss
@@ -23,9 +23,7 @@
         margin-left: 5px;
         border-bottom: solid 2px black;
         font-size: larger;
-        color: darkblue
-
-        
+        color: rgb(10, 10, 61)
     }
 
     .input-text, textarea {
