--- a/src/components/list-item/list-item.styles.scss
+++ b/src/components/list-item/list-item.styles.scss
@@ -6,7 +6,7 @@
     height: 40px;
     border: 2px solid grey;
     border-radius: 3px;
-    margin-bottom: 3px;
+    margin-top: 3px;
 
     .item-text {
         margin-left: 4px;
