log in page basic set up

--- a/src/components/button/custom-button.styles.scss
+++ b/src/components/button/custom-button.styles.scss
@@ -4,10 +4,10 @@
     border: none;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
 
     .custom-button {
-        margin-left: 3px;
+        margin-right: 5px;
         width: 45px;
         height: 100%;
         border-radius: 25px;
