--- a/src/components/button/custom-button.styles.scss
+++ b/src/components/button/custom-button.styles.scss
@@ -7,7 +7,7 @@
     justify-content: center;
 
     .custom-button {
-        margin-right: 5px;
+        margin-left: 5px;
         width: 45px;
         height: 100%;
         border-radius: 25px;
@@ -15,7 +15,6 @@
         color: white;
         font-size: xx-large;
         border: 5px;
-        
     }
 
     .input-text {
