--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,6 +4,8 @@
     justify-content: space-between;
     background-color: black;
     color: white;
+    width: 100%;
+    margin-top: -3px;
 
     p {
         margin-left: 2vh;
