--- a/src/components/directory/directory-component.styles.scss
+++ b/src/components/directory/directory-component.styles.scss
@@ -1,6 +1,10 @@
 .directory-card {
-    width: 200px;
+    width: 180px;
     height: 160px;
-    border: 3px solid black;
+    border: 1px solid black;
     margin: 5px;
+    border-radius: 2px;
+    justify-content: center;
+    align-items: center;
+
 }
