fixed toggle and delete action fired at the same time

--- a/src/components/list-item/list-item.styles.scss
+++ b/src/components/list-item/list-item.styles.scss
@@ -16,6 +16,10 @@
     .item-text-completed {
         text-decoration: line-through;
     }
+
+    .text-item-container {
+        width: 100%;
+    }
 }
 
 
