--- a/src/components/list-item/list-item.styles.scss
+++ b/src/components/list-item/list-item.styles.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 40px;
+    min-height: 40px;
     border: 2px solid grey;
     border-radius: 3px;
     margin-top: 3px;
@@ -29,4 +29,5 @@
     font-weight: bold;
     font-size: x-large;
     color: brown;
+    width: 20px;
 }
