--- a/src/components/directory/directory-component.styles.scss
+++ b/src/components/directory/directory-component.styles.scss
@@ -7,4 +7,16 @@
     justify-content: center;
     align-items: center;
 
+    .delete-container {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: -20px;
+
+        .delete-icon {
+            justify-content: end;
+            width: 20px;
+            height: 20px;
+            margin: 3px;
+        }
+    }
 }
