--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  min-height: 80vh;
+  min-height: 89.2vh;
   padding-bottom:90px;
+  background-color: silver;
 
   .positionInBottom {
     position: fixed;
@@ -23,7 +24,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: silver;
 }
 
 
